--- a/20230505-2.html
+++ b/20230505-2.html
@@ -475,7 +475,7 @@
         <div class="container">
             <div class="row">
                 <nav class="nav">
-                    <a class="nav-link disabled fw-700" aria-current="page" href="#">CopyRight©20230512 by 13號朱敏雄</a>
+                    <a class="nav-link disabled fw-700" aria-current="page" href="#">CopyRight©20230512 by 朱敏雄</a>
                     <a class="nav-link" href="https://www.facebook.com/">Facebook</a>
                     <a class="nav-link" href="https://www.twitter.com/">Twitter</a>
                   </nav>
