--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         .bg-cover1 {
             background-size: cover;
         }
-        /* .carousel{
+        .carousel{
             height: 800px;
-        } */
+        }
 
         .sec9t {
             background-color: rgba(0, 0, 0, .3);
@@ -509,7 +509,7 @@
         <div class="container">
             <div class="row">
                 <nav class="nav">
-                    <a class="nav-link disabled fw-700" aria-current="page" href="#">CopyRight©20230512 by 13號朱敏雄</a>
+                    <a class="nav-link disabled fw-700" aria-current="page" href="#">CopyRight©20230512 by 號朱敏雄</a>
                     <a class="nav-link" href="https://www.facebook.com/">Facebook</a>
                     <a class="nav-link" href="https://www.twitter.com/">Twitter</a>
                 </nav>
